# authzee

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SDK_CHANGELOG.md  TODO.md  basic_example.py  complex_example.py  jmespath_custom_functions.py  noxfile.py  re_test.py  requirements.txt  setup.cfg
docs/: authzee_balloon.pxo  authzee_logo.pxo  logo.pxo  sdk_patterns.md  sdks.md  specification.md
src/: reference.py  reference.rs  requirements.txt
src/authzee/: __init__.py  authzee.py  authzee_sync.py  backend_locality.py  exceptions.py  grant.py  grant_effect.py  grant_iter.py  grants_page.py  logging_config.py  loop.py  page_refs_page.py  raw_grants_page.py  reference.py  resource_action.py  resource_authz.py  storage_flag.py
src/authzee/compute/: __init__.py  compute_backend.py  general.py  main_process_compute.py  multiprocess_compute.py  shared_mem_event.py  taskiq_compute.py  threaded_compute.py
src/authzee/storage/: __init__.py  memory_storage.py  parallel_memory_storage.py  s3_storage.py  sql_storage.py  sql_storage_models.py  storage_backend.py
tests/unit/: test_reference.py  test_reference.rs
