[metadata]
name = authzee
version = attr: authzee.__version__
description = Authorization framework that uses a querying grant and revoke system.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Brandon Temple Paul
author_email = btemplepgit@gmail.com
url = https://github.com/btemplep/authzee
project_urls = 
    Repository = https://github.com/btemplep/authzee
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet
license = MIT
license_files = 
    License
keywords = 
    auth
    authz
    authorization
    framework
python_requires = >= 3.7

[options]
package_dir=
    =src
packages = find:
install_requires =
    loguru
    jmespath
    pydantic ~= 2.0

[options.packages.find]
where=src
exclude =
    tests

[options.extras_require]
s3 = 
    aioboto3
    aiobotocore
sql = 
    SQLAlchemy ~= 2.0
taskiq = 
    taskiq

all = authzee[s3,sql,taskiq]
dev = 
    build
    coverage
    moto[s3, server]
    nox
    piccolo-theme
    pytest
    pytest-cov
    sphinx
    twine
